@@ -24,16 +24,17 @@
 #define MODEL_CODE(c) (c == OLS || c == CORC || c == HILU || c == WLS || \
                        c == POOLED || c == HCCM || c == HSK || c == ARMA || \
                        c == TSLS || c == LOGIT || c == PROBIT || c == GARCH || \
-                       c == AR || c == VAR || c == COINT || c == COINT2 || \
-                       c == MPOLS || c == LAD || c == LOGISTIC || c == TOBIT || \
-                       c == PWE)
+                       c == AR || c == VAR || c == MPOLS || c == LAD || \
+                       c == LOGISTIC || c == TOBIT || c == PWE)
 #else
 #define MODEL_CODE(c) (c == OLS || c == CORC || c == HILU || c == WLS || \
                        c == POOLED || c == HCCM || c == HSK || c == ARMA || \
                        c == TSLS || c == LOGIT || c == PROBIT || c == GARCH || \
-                       c == AR || c == VAR || c == COINT || c == COINT2 || \
-                       c == LAD || c == LOGISTIC || c == TOBIT || c == PWE)
+                       c == AR || c == VAR || c == LAD || c == LOGISTIC || \
+                       c == TOBIT || c == PWE)
 #endif
+
+#define COINT_CODE(c) (c == COINT || c == COINT2)
 
 #define ADDVAR_CODE(c) (c == LOGS || c == LAGS || c == SQUARE || \
                         c == DIFF || c == LDIFF)
