@@ -3,7 +3,10 @@ version 1.3.3
   command-line program
 - Fix bug: possible crash in "loop foreach" if an invalid variable
   name is given
-- Fixes for appending data (make more fliexible)
+- Fixes for appending data (make more flexible: allow appending of
+  observations and/or variables)
+- Fixes for cointegration tests: improve dialogs and prevent crash
+  on selection of one variable plus the constant
 
 01/28/2005 version 1.3.2
 - Fix bug in auto-determination of lag in ADF test: was looking
